<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animal"
    tools:context=".MainActivity" >

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1" />


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <Button
                            android:id="@+id/btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/java_1"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/basics_of_java"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/java_2"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/oop_in_java"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/dsa"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />


                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/data_struc_amp_algo_in_java"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="OS"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />


                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="OPERATING SYSTEM"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/android"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/android_in_java_kotlin"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/soft_eng"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/software_engineering"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/daa"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/design_amp_analysis_of_algorithms"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/co_amp_ca"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/comp_organisation_amp_architecture"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/dbms"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#009688" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"

                            android:text="@string/database_management_system"
                            android:textColor="@color/teal_700"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="45dp"
                            android:layout_marginBottom="25dp"
                            android:text="@string/news_app"
                            android:textStyle="bold|italic"
                            app:backgroundTint="#F44336" />


                </LinearLayout>


        </ScrollView>

</RelativeLayout>